--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,3 +7,6 @@
 .Secondsection{
   box-shadow: 0px 8px 34px rgba(120, 168, 223, 0.18);
 }
+.Thirdsection{
+  background: linear-gradient(261.06deg, #412694 7.6%, #6A4BE2 100%);
+}
