--- a/src/pages/companies/Company.module.css
+++ b/src/pages/companies/Company.module.css
@@ -5,3 +5,6 @@
   border: 2px solid rgba(255, 138, 30, 0.64);
   border-radius: 20px;
 }
+.Filter{
+  filter: drop-shadow(0px 10px 15px rgba(0, 0, 0, 0.08));
+}
