--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -62,7 +62,7 @@ body {
   height: calc(100% + 500px) !important;
 }
 
-.react-tel-input .form-control {
+/* .react-tel-input .form-control {
   width: 100% !important;
   background: #fff9f4 !important;
   border: 1px solid rgba(255, 124, 3, 0.56) !important;
@@ -70,11 +70,11 @@ body {
   padding-top: 7px;
   padding-bottom: 7px;
   margin: 7px 0 !important;
-}
-.react-tel-input .flag-dropdown {
+} */
+/* .react-tel-input .flag-dropdown {
   background: #fff9f4 !important;
   border: 1px solid rgba(255, 124, 3, 0.56) !important;
-}
+} */
 
 .checkabout {
   display: inline;
