--- a/src/pages/upload/Upload.module.css
+++ b/src/pages/upload/Upload.module.css
@@ -7,8 +7,8 @@
 .Shadow2 {
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.03);
 }
-.Shadow3{
-    box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.06);
+.Shadow3 {
+  box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.06);
 }
 .InputClass {
   width: 100% !important;
@@ -19,8 +19,8 @@
   padding-bottom: 8px;
   margin-top: 30px 0 0 0 !important;
 }
-.ContainerClass{
-    margin-top: 6px !important;
+.ContainerClass {
+  margin-top: 6px !important;
 }
 .Dropdown {
   background: #fff9f4 !important;
@@ -29,9 +29,15 @@
 .Border {
   border: 1px solid rgba(119, 134, 155, 0.3);
 }
-.BorderDashed{
- background: #FFFBF8;
-border: 1px dashed #FFE6CE;
-border-radius: 8px;
-
+.BorderDashed {
+  background: #fffbf8;
+  border: 1px dashed #ffe6ce;
+  border-radius: 8px;
+}
+.CheckoutBg {
+  background: linear-gradient(0deg, #ff7c03, #ff7c03);
+  border-radius: 9px;
+}
+.Line{
+  border-top: 1px solid rgba(119, 134, 155, 0.12);
 }
