--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -1,4 +1,7 @@
 .Button {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-
+}
+.Dashbutton {
+  border: 1px solid rgba(255, 124, 3, 0.51);
+  border-radius: 6px;
 }
