--- a/src/pages/signup/Signup.module.css
+++ b/src/pages/signup/Signup.module.css
@@ -15,6 +15,7 @@
   padding-top: 7px;
   padding-bottom: 7px;
   margin: 7px 0 !important;
+  color: #6C829B;
 }
 .Dropdown {
   background: #fff9f4 !important;
