--- a/src/pages/about/About.module.css
+++ b/src/pages/about/About.module.css
@@ -1,5 +1,5 @@
 .Background {
-  background: linear-gradient(253.33deg, #3a1f87 7.47%, #7051ef 123.98%);
+  background: #3A1F87
 }
 .Gridcontainer {
   display: grid;
