--- a/src/pages/companies/Company.module.css
+++ b/src/pages/companies/Company.module.css
@@ -1,5 +1,5 @@
 .Main {
-  background: linear-gradient(255.72deg, #3a2087 4.93%, #5d3fc9 110.31%);
+ background: #3A1F87;
 }
 .Border {
   border: 2px solid rgba(255, 138, 30, 0.64);
