--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2,11 +2,14 @@
 
 }
 .Firstsection{
-  background: linear-gradient(253.33deg, #3A1F87 7.47%, #7051EF 123.98%);
+  background: #3A1F87;
 }
 .Secondsection{
   box-shadow: 0px 8px 34px rgba(120, 168, 223, 0.18);
 }
 .Thirdsection{
   background: linear-gradient(261.06deg, #412694 7.6%, #6A4BE2 100%);
+}
+.Border{
+  border-bottom: 1px solid rgba(110, 120, 132, 0.19);
 }
