--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,7 +8,8 @@
   box-shadow: 0px 8px 34px rgba(120, 168, 223, 0.18);
 }
 .Thirdsection{
-  background: linear-gradient(261.06deg, #412694 7.6%, #6A4BE2 100%);
+ background: #412694;
+
 }
 .Border{
   border-bottom: 1px solid rgba(110, 120, 132, 0.19);
