--- a/src/pages/product/Product.module.css
+++ b/src/pages/product/Product.module.css
@@ -1,5 +1,5 @@
 .Main {
-  background: linear-gradient(255.72deg, #3a2087 4.93%, #5d3fc9 110.31%);
+  background: #3a2087;
 }
 .Healthcard {
   background: linear-gradient(
